# jajicaiot

./: .gitignore  .gitmodules  README.md
ESP32/: .cproject  .project
ESP32/proyectos/iotCronotempLcd/: .cproject  .project  CMakeLists.txt  (+13 more)
ESP32/proyectos/iotCronotempLcd/main/: CMakeLists.txt  Kconfig.projbuild  auto.c  automan.c  automatico.c  boton_abajo.c  boton_arriba.c  heating.c  humidity.c  instalar.py  iotCronoTemp.c  lcd.c  lv_cronotermostato.c  lv_font_led.c  lv_font_led_20.c  lv_font_led_30.c  main.c  manual.c  termometro.c
ESP32/proyectos/iotCronotempLcd/main/include/: funciones_usuario.h  lcd.h  lv_cronotermostato.h
componentes/alarmas/: CMakeLists.txt  alarmas.c
componentes/api_json/: api_json.c
componentes/comunes/: Kconfig.projbuild  datos_comunes.c
componentes/conexiones/: CMakeLists.txt  conexiones.c  mqtt.c
componentes/configuracion/: CMakeLists.txt  Kconfig.projbuild  component.mk  configuracion.c
componentes/ds18x20/: CMakeLists.txt  component.mk  lectura.c
componentes/espota/: CMakeLists.txt  Kconfig.projbuild  component.mk  espota.c
componentes/interfaz_usuario/: interfaz_usuario.c
componentes/nvslib/: CMakeLists.txt  nvslib.c
componentes/programador/: CMakeLists.txt  Kconfig.projbuild  ntp.c  programmer.c
escenarios/: ota_esp8266.txt
esp8266/: Makefile  enviroment.mk
esp8266/general/: Makefile  targets.mk
esp8266/include/: appdisplay.h  configuracion.h  dht22.h  dialogoJson.h  mqtt.h  ntp.h  ota_config.h  programmer.h  upgrade.h  user_config.h  wfof_data.h  wfof_idxs.h  wifi.h  wlcd.h
esp8266/librerias/: Makefile
(+474 files in other folders)
