idf_component_register(SRCS "main.c" "iotCronoTemp.c" "lcd.c" "heating.c" "lv_font_led.c" "lv_font_led_30.c" 
"lv_font_led_20.c" "humidity.c" "termometro.c" "automatico.c" "automan.c" "manual.c" "boton_arriba.c" "boton_abajo.c"
                    INCLUDE_DIRS "include")
                    
#idf_component_register(SRCS "main.c" "iotCronoTemp.c" "lv_cronotermostato.c" "heating.c" "lv_font_led.c" "lv_font_led_30.c" 
#"lv_font_led_20.c" "humidity.c" "termometro.c" "automatico.c" "automan.c" "manual.c" "boton_arriba.c" "boton_abajo.c"
#                    INCLUDE_DIRS "include")